[project]
name = "simple-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.7",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.8",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
